--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>customer</module>
       <module>fraud</module>
+      <module>eureca</module>
   </modules>
 
   <name>toutsuservices</name>
@@ -22,6 +23,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring.boot.maven.plugin.version>2.6.7</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>2.6.7</spring.boot.dependencies.version>
+    <spring.cloud.version>2021.0.0</spring.cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -33,6 +35,15 @@
         <scope>import</scope>
         <type>pom</type>
       </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
